# Labelbox-cmu

./: highlighter.py  pyproject.toml
cmu_datasets/: humaneval_codex_incoder_grade_cpp.json  humaneval_codex_incoder_grade_java.json  humaneval_codex_incoder_grade_js.json
custom-interfaces/clone-interface/: index.html
custom-interfaces/codeforces-tagging/: index.html
custom-interfaces/ranking/: index.html  instruction.tex
highlighted_dataset/cpp/: 0_0.html  0_1.html  0_2.html  0_3.html  0_4.html  0_5.html  100_0.html  100_1.html  100_2.html  100_3.html  100_4.html  100_5.html  101_0.html  101_1.html  101_2.html  101_3.html  101_4.html  101_5.html  102_0.html  102_1.html  102_2.html  102_3.html  102_4.html  102_5.html  103_0.html  103_1.html  103_2.html  103_3.html  103_4.html  103_5.html  104_0.html  104_1.html  104_2.html  104_3.html  104_4.html  104_5.html  105_0.html  105_1.html  105_2.html  105_3.html  (+921 more)
highlighted_dataset/java/: 0_0.html  0_1.html  0_2.html  0_3.html  0_4.html  0_5.html  100_0.html  100_1.html  100_2.html  100_3.html  100_4.html  100_5.html  101_0.html  101_1.html  101_2.html  101_3.html  101_4.html  101_5.html  102_0.html  102_1.html  102_2.html  102_3.html  102_4.html  102_5.html  103_0.html  103_1.html  103_2.html  103_3.html  103_4.html  103_5.html  104_0.html  104_1.html  104_2.html  104_3.html  104_4.html  104_5.html  105_0.html  105_1.html  105_2.html  105_3.html  (+781 more)
highlighted_dataset/js/: 0_0.html  0_1.html  0_2.html  0_3.html  0_4.html  0_5.html  100_0.html  100_1.html  100_2.html  100_3.html  100_4.html  100_5.html  101_0.html  (+933 more)
