[tool.poetry]
name = "labelbox-cmu"
version = "0.1.0"
description = ""
authors = ["Misha Evtikhiev <mikhail.evtikhiev@jetbrains.com>"]
readme = "README.md"
packages = [{include = "labelbox_cmu"}]

[tool.poetry.dependencies]
python = "^3.10"
labelbox = "^3.39.0"
jupyter = "^1.0.0"
html2image = "^2.0.2"
imgkit = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
